Correct small issues on mobile

--- a/styles.css
+++ b/styles.css
@@ -108,7 +108,7 @@ body {
   flex-direction: column;
   align-items: center;
   gap: 1.5rem;
-  height: 90vh;
+  height: 100vh;
   padding-top: 72px;
   background-image: url("assets/pattern_hero.svg");
   background-size: contain;
@@ -240,7 +240,7 @@ body {
 
 @media only screen and (max-width: 767px) {
   #hero_section {
-    height: 70vh;
+    height: 75vh;
   }
 
   #hero_section .image_wrapper .options {
@@ -254,6 +254,7 @@ body {
   flex-direction: column;
   gap: 1.5rem;
   margin-bottom: 28px;
+  transition: all ease-in-out 0.2s;
 }
 
 #info_blocks * {
